Metric Template - bug fixes

--- a/src/app/application-onboarding/application/application-creation/application.component.html
+++ b/src/app/application-onboarding/application/application-creation/application.component.html
@@ -480,8 +480,8 @@
 
 <!-- Modal Log -->
 <div class="modal bd-example-modal-lg fade" id="newLogTemplate" tabindex="-1" role="dialog" aria-labelledby="newLogTemplateLabel" aria-hidden="true">
-  <div class="modal-dialog modal-dialog-centered" role="document">
-    <div class="modal-content" style="min-width:1000px;">
+  <div class="modal-dialog modal-dialog-centered modal-width" role="document">
+    <div class="modal-content">
       <div class="modal-header">
         <h5 class="modal-title">{{templateEditMode?'Edit Log Template':'New Log Template'}}</h5>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close" #logModel>
@@ -497,8 +497,8 @@
 
 <!-- Modal Matric -->
 <div class="modal bd-example-modal-lg fade" id="newMatricTemplate" tabindex="-1" role="dialog" aria-labelledby="newMatricTemplateLabel" aria-hidden="true">
-  <div class="modal-dialog modal-dialog-centered" role="document">
-    <div class="modal-content" style="min-width:1000px;">
+  <div class="modal-dialog modal-dialog-centered modal-width" role="document">
+    <div class="modal-content">
       <div class="modal-header">
         <h5 class="modal-title">{{templateEditMode ? 'Edit Metric Template':'New Metric Template'}}</h5>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close" #metricModel>
