--- a/src/styles.less
+++ b/src/styles.less
@@ -2074,3 +2074,15 @@ td .table-sm input, td .table-sm select, td .table-sm{
 	.clickable {
 		cursor: pointer;
 	}
+	.modal-width
+	{
+	max-width: 100% !important;
+	width: 80% !important;
+	min-height: 400px;
+	}
+	.border0{
+		border:0px;
+	}
+	.border0::after .border0::before {
+		border:0px;
+	}
