--- a/src/app/application/deployment-verification/deployment-verification.component.less
+++ b/src/app/application/deployment-verification/deployment-verification.component.less
@@ -301,3 +301,11 @@ paddingLeftRight5
   background-color:#52c0ff !important;
   color: white !important;
 }
+.clearSearch{
+  vertical-align: -webkit-baseline-middle;
+    position: relative;
+    right: 20px;
+    color: #777;
+    cursor: pointer;
+    z-index: 10;
+}
