--- a/src/app/application/deployment-verification/log-analysis/log-analysis.component.less
+++ b/src/app/application/deployment-verification/log-analysis/log-analysis.component.less
@@ -100,3 +100,12 @@
 .timeanalysis-header{
     padding: 11px 0px 0px 0px;
 }
+
+/*fixes*/
+.card-spacing{
+    padding: 0 !important;
+
+}
+.card-spacing > div{
+    padding: 5px 12px !important;
+    }
