--- a/src/app/charts/time-analysis-chart/time-analysis-chart.component.html
+++ b/src/app/charts/time-analysis-chart/time-analysis-chart.component.html
@@ -1,6 +1,6 @@
 <div *ngIf = "ChartShow">
     <div class="row">
-<div class="col-sm-11 alignHeading"><span>{{serviceName}}: </span><span [ngClass]= "{'text-danger':topic == 'CRITICAL ERROR', 'text-error':topic=='ERROR','text-warning':topic=='WARN'}">{{topic}}</span>: <span data-toggle="tooltip" data-placement="top" title="{{description}}">{{description | ellipsis:200}}</span></div>
+<div class="col-sm-11 alignHeading"><span>{{serviceName}}: </span><span [ngClass]= "{'text-danger':topic == 'CRITICAL ERROR', 'text-error':topic=='ERROR','text-warning':topic=='WARN'}">{{topic}}</span>: <span  data-placement="top" title="{{description}}">{{description | ellipsis:200}}</span></div>
 <div class="col-sm-1">
 
 <button type="button" class="close pull-right" aria-label="Close" (click)="closeTimeAnalysis()">
