--- a/src/app/application/deployment-verification/metric-analysis/metric-analysis.component.html
+++ b/src/app/application/deployment-verification/metric-analysis/metric-analysis.component.html
@@ -367,11 +367,11 @@
                   <!-- <i class="fa fa-line-chart" aria-hidden="true"></i> -->
                   <app-line-chart [dataSource]="chart" [chartProperty]="lineChartProperty" [view]="chartSize"></app-line-chart>
                 </div>
-                <p class="mb-1"><b class="countDisabledbtn">QUARTILE COMPARISON : </b></p>
+                <!-- <p class="mb-1"><b class="countDisabledbtn">QUARTILE COMPARISON : </b></p>
                 <div class="graph mb-4">
                   <hr>
                   <img src="../../../../assets/images/matric_graph02.jpg" class="img-fluid" alt="image" />
-                </div>
+                </div> -->
                 <div class="card mb-3">
                   <div class="card-header text-uppercase">
                     Analysis
